test/conformance/chainsaw/generate/policy/standard/clone/source-namespace/reject-clone-foreign.yaml
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: clone-source-clone-foreign
  namespace: clone-source-tenant
spec:
  rules:
  - name: copy
    match:
      any:
      - resources:
          kinds:
          - ConfigMap
          names:
          - clone-trigger
    generate:
      apiVersion: v1
      kind: ConfigMap
      name: copy
      namespace: clone-source-tenant
      clone:
        name: source
        namespace: clone-source-other
